--- a/bib/PhDfltClean.bib
+++ b/bib/PhDfltClean.bib
@@ -285,6 +285,20 @@
  year = {2013}
 }
 
+@article{Buenrostro2015,
+ archiveprefix = {arXiv},
+ arxivid = {15334406},
+ author = {Buenrostro, Jason D and Wu, Beijing and Litzenburger, Ulrike M and Ruff, Dave and Gonzales, Michael L and Snyder, Michael P and Chang, Howard Y and Greenleaf, William J},
+ doi = {10.1038/nature14590},
+ eprint = {15334406},
+ journal = {Nature},
+ number = {7561},
+ pages = {486--90},
+ title = {Single-cell chromatin accessibility reveals principles of regulatory variation.},
+ volume = {523},
+ year = {2015}
+}
+
 @article{Cabili2011,
  author = {Cabili, Moran N and Trapnell, Cole and Goff, Loyal and Koziol, Magdalena and Tazon-Vega, Barbara and Regev, Aviv and Rinn, John L},
  doi = {10.1101/gad.17446611},
@@ -508,6 +522,29 @@
  year = {2016}
 }
 
+@article{Davies2017,
+ author = {Davies, James O J and Oudelaar, A Marieke and Higgs, Douglas R and Hughes, Jim R},
+ doi = {10.1038/nmeth.4146},
+ journal = {Nature Publishing Group},
+ number = {2},
+ publisher = {Nature Publishing Group},
+ title = {How best to identify chromosomal interactions : a comparison of approaches},
+ volume = {14},
+ year = {2017}
+}
+
+@article{Davies2016,
+ author = {Davies, James O J and Telenius, Jelena M and McGowan, Simon J and Roberts, Nigel A and Taylor, Stephen and Higgs, Douglas R and Hughes, Jim R},
+ doi = {10.1038/nmeth.3664},
+ journal = {Nature Methods},
+ number = {1},
+ pages = {74--80},
+ publisher = {Nature Publishing Group},
+ title = {Multiplexed analysis of chromosome conformation at vastly improved sensitivity},
+ volume = {13},
+ year = {2016}
+}
+
 @article{Davis2017,
  author = {Davis, Allan Peter and Grondin, Cynthia J. and Johnson, Robin J. and Sciaky, Daniela and King, Benjamin L. and McMorran, Roy and Wiegers, Jolene and Wiegers, Thomas C. and Mattingly, Carolyn J.},
  doi = {10.1093/nar/gkw838},
@@ -630,6 +667,18 @@
  title = {HPOSim: An r package for phenotypic similarity measure and enrichment analysis based on the human phenotype ontology},
  volume = {10},
  year = {2015}
+}
+
+@article{Denker2016,
+ author = {Denker, Annette and de Laat, Wouter},
+ doi = {10.1101/gad.281964.116},
+ journal = {Genes {\&} development},
+ number = {12},
+ pages = {1357--82},
+ publisher = {Cold Spring Harbor Laboratory Press},
+ title = {The second decade of 3C technologies: detailed insights into nuclear organization.},
+ volume = {30},
+ year = {2016}
 }
 
 @article{Dickel2018,
@@ -793,17 +842,6 @@
  year = {2005}
 }
 
-@article{Durinck2009b,
- author = {Durinck, Steffen and Spellman, Paul T and Birney, Ewan and Huber, Wolfgang},
- doi = {10.1038/nprot.2009.97},
- journal = {Nature protocols},
- number = {8},
- pages = {1184--1191},
- title = {Mapping identifiers for the integration of genomic datasets with the R/Bioconductor package biomaRt.},
- volume = {4},
- year = {2009}
-}
-
 @article{Durinck2009,
  author = {Durinck, Steffen and Spellman, Paul T and Birney, Ewan and Huber, Wolfgang},
  doi = {10.1038/nprot.2009.97},
@@ -812,6 +850,17 @@
  pages = {1184--1191},
  publisher = {Nature Publishing Group},
  title = {Mapping identifiers for the integration of genomic datasets with the R/Bioconductor package biomaRt},
+ volume = {4},
+ year = {2009}
+}
+
+@article{Durinck2009b,
+ author = {Durinck, Steffen and Spellman, Paul T and Birney, Ewan and Huber, Wolfgang},
+ doi = {10.1038/nprot.2009.97},
+ journal = {Nature protocols},
+ number = {8},
+ pages = {1184--1191},
+ title = {Mapping identifiers for the integration of genomic datasets with the R/Bioconductor package biomaRt.},
  volume = {4},
  year = {2009}
 }
@@ -1135,6 +1184,16 @@
  publisher = {Oxford University Press},
  title = {A large genomic deletion leads to enhancer adoption by the lamin B1 gene: a second path to autosomal dominant adult-onset demyelinating leukodystrophy (ADLD)},
  volume = {24},
+ year = {2015}
+}
+
+@article{Grubert2015,
+ author = {Grubert, Fabian and Zaugg, Judith B. and Kasowski, Maya and Ursu, Oana and Spacek, Damek V. and Martin, Alicia R. and Greenside, Peyton and Srivas, Rohith and Phanstiel, Doug H. and Pekowska, Aleksandra and Heidari, Nastaran and Euskirchen, Ghia and Huber, Wolfgang and Pritchard, Jonathan K. and Bustamante, Carlos D. and Steinmetz, Lars M. and Kundaje, Anshul and Snyder, Michael},
+ doi = {10.1016/j.cell.2015.07.048},
+ journal = {Cell},
+ pages = {1--15},
+ publisher = {Elsevier Inc.},
+ title = {Genetic Control of Chromatin States in Humans Involves Local and Distal Chromosomal Interactions},
  year = {2015}
 }
 
@@ -1473,6 +1532,18 @@
  year = {2015}
 }
 
+@article{Hughes2014,
+ author = {Hughes, Jim R and Roberts, Nigel and McGowan, Simon and Hay, Deborah and Giannoulatou, Eleni and Lynch, Magnus and {De Gobbi}, Marco and Taylor, Stephen and Gibbons, Richard and Higgs, Douglas R},
+ doi = {10.1038/ng.2871},
+ journal = {Nature genetics},
+ number = {2},
+ pages = {205--212},
+ publisher = {Nature Publishing Group},
+ title = {Analysis of hundreds of cis-regulatory landscapes at high resolution in a single, high-throughput experiment.},
+ volume = {46},
+ year = {2014}
+}
+
 @article{Huminiecki2004,
  author = {Huminiecki, L.},
  doi = {10.1101/gr.2705204},
@@ -1584,6 +1655,18 @@
  title = {Dynamic Reorganization of Extremely Long-Range Promoter-Promoter Interactions between Two States of Pluripotency},
  volume = {17},
  year = {2015}
+}
+
+@article{Kalhor2011,
+ author = {Kalhor, Reza and Tjong, Harianto and Jayathilaka, Nimanthi and Alber, Frank and Chen, Lin},
+ doi = {10.1038/nbt.2057},
+ journal = {Nature Biotechnology},
+ number = {1},
+ pages = {90--98},
+ publisher = {Nature Publishing Group},
+ title = {Genome architectures revealed by tethered chromosome conformation capture and population-based modeling},
+ volume = {30},
+ year = {2011}
 }
 
 @article{Katainen2015,
@@ -1720,6 +1803,18 @@
  title = {A fast algorithm for matrix balancing},
  volume = {33},
  year = {2013}
+}
+
+@article{Kolovos2018,
+ author = {Kolovos, Petros and Brouwer, Rutger W W and Kockx, Christel E M and Lesnussa, Michael and Kepper, Nick and Zuin, Jessica and Imam, A M Ali and van de Werken, Harmen J G and Wendt, Kerstin S and Knoch, Tobias A and van IJcken, Wilfred F J and Grosveld, Frank},
+ doi = {10.1038/nprot.2017.132},
+ journal = {Nature Protocols},
+ number = {3},
+ pages = {459--477},
+ publisher = {Nature Publishing Group},
+ title = {Investigation of the spatial structure and interactions of the genome at sub-kilobase-pair resolution using T2C},
+ volume = {13},
+ year = {2018}
 }
 
 @article{Koonin2005,
@@ -2132,6 +2227,17 @@
  year = {2017}
 }
 
+@article{Mumbach2016,
+ author = {Mumbach, Maxwell R and Rubin, Adam J. and Flynn, Ryan A. and Dai, Chao and Khavari, Paul A. and Greenleaf, William J. and Chang, Howard Y.},
+ doi = {10.1038/nmeth.3999},
+ journal = {Nature methods},
+ number = {11},
+ pages = {919--922},
+ title = {HiChIP: efficient and sensitive analysis of protein-directed genome architecture.},
+ volume = {13},
+ year = {2016}
+}
+
 @article{Muro2010,
  author = {Muro, Enrique M and Andrade-Navarro, Miguel A},
  doi = {10.1186/1471-2148-10-338},
@@ -2153,6 +2259,18 @@
  title = {Dynamics of mammalian chromosome evolution inferred from multispecies comparative maps.},
  volume = {309},
  year = {2005}
+}
+
+@article{Nagano2013,
+ author = {Nagano, Takashi and Lubling, Yaniv and Stevens, Tim J and Schoenfelder, Stefan and Yaffe, Eitan and Dean, Wendy and Laue, Ernest D and Tanay, Amos and Fraser, Peter},
+ doi = {10.1038/nature12593},
+ journal = {Nature},
+ number = {7469},
+ pages = {59--64},
+ publisher = {Nature Publishing Group},
+ title = {Single-cell Hi-C reveals cell-to-cell variability in chromosome structure.},
+ volume = {502},
+ year = {2013}
 }
 
 @article{Nagano2017,
@@ -2527,6 +2645,17 @@
  year = {2016}
 }
 
+@article{Ramani2016,
+ author = {Ramani, Vijay and Deng, Xinxian and Gunderson, Kevin L and Steemers, Frank J and Disteche, Christine M and Noble, William S and Duan, Zhijun and Shendure, Jay},
+ doi = {10.1101/065052},
+ journal = {bioRxiv},
+ number = {3},
+ pages = {065052},
+ title = {Massively multiplex single-cell Hi-C},
+ volume = {14},
+ year = {2016}
+}
+
 @article{Rao2014,
  author = {Rao, Suhas S P and Huntley, Miriam H and Durand, Neva C and Stamenova, Elena K and Bochkov, Ivan D and Robinson, James T and Sanborn, Adrian L and Machol, Ido and Omer, Arina D and Lander, Eric S and Aiden, Erez Lieberman},
  doi = {10.1016/j.cell.2014.11.021},
@@ -2595,6 +2724,15 @@
  title = {Gene family level comparative analysis of gene expression n mammals validates the ortholog conjecture},
  volume = {6},
  year = {2014}
+}
+
+@article{Rotem2015,
+ author = {Rotem, Assaf and Ram, Oren and Shoresh, Noam and Sperling, Ralph A and Goren, Alon and Weitz, David A and Bernstein, Bradley E},
+ doi = {10.1038/nbt.3383},
+ journal = {Nature Biotechnology},
+ number = {October},
+ title = {Single-cell ChIP-seq reveals cell subpopulations defined by chromatin state},
+ year = {2015}
 }
 
 @article{Roukos2013,
@@ -2681,6 +2819,17 @@
  journal = {Nucleic Acids Research},
  pages = {gkv723},
  title = {The yeast genome undergoes significant topological reorganization in quiescence},
+ year = {2015}
+}
+
+@article{Sahlen2015,
+ author = {Sahl{\'{e}}n, Pelin and Abdullayev, Ilgar and Ramsk{\"{o}}ld, Daniel and Matskova, Liudmila and Rilakovic, Nemanja and L{\"{o}}tstedt, Britta and Albert, Thomas J. and Lundeberg, Joakim and Sandberg, Rickard},
+ doi = {10.1186/s13059-015-0727-9},
+ journal = {Genome Biology},
+ number = {1},
+ pages = {156},
+ title = {Genome-wide mapping of promoter-anchored interactions with close to single-enhancer resolution},
+ volume = {16},
  year = {2015}
 }
 
@@ -3188,6 +3337,18 @@
  year = {2004}
 }
 
+@article{Ulianov2017,
+ author = {Ulianov, Sergey V. and Galitsyna, Aleksandra A. and Flyamer, Ilya M. and Golov, Arkadiy K. and Khrameeva, Ekaterina E. and Imakaev, Maxim V. and Abdennur, Nezar A. and Gelfand, Mikhail S. and Gavrilov, Alexey A. and Razin, Sergey V.},
+ doi = {10.1186/s13072-017-0142-4},
+ journal = {Epigenetics {\&} Chromatin},
+ number = {1},
+ pages = {35},
+ publisher = {BioMed Central},
+ title = {Activation of the alpha-globin gene expression correlates with dramatic upregulation of nearby non-globin genes and changes in local and large-scale chromatin spatial structure},
+ volume = {10},
+ year = {2017}
+}
+
 @article{Velagaleti2005,
  author = {Velagaleti, Gopalrao V.N. and Bien-Willner, Gabriel A. and Northup, Jill K. and Lockhart, Lillian H. and Hawkins, Judy C. and Jalal, Syed M. and Withers, Marjorie and Lupski, James R. and Stankiewicz, Pawel},
  doi = {10.1086/429252},
@@ -3256,6 +3417,17 @@
  title = {Chromosome order in HeLa cells changes during mitosis and early G1, but is stably maintained during subsequent interphase stages.},
  volume = {160},
  year = {2003}
+}
+
+@article{Wang2016d,
+ author = {Wang, S. and Su, J.-H. and Beliveau, B. J. and Bintu, B. and Moffitt, J. R. and Wu, C.-t. and Zhuang, X.},
+ doi = {10.1126/science.aaf8084},
+ journal = {Science},
+ number = {6299},
+ pages = {598--602},
+ title = {Spatial organization of chromatin domains and compartments in single chromosomes},
+ volume = {353},
+ year = {2016}
 }
 
 @article{Weiler1995,
