--- a/bib/PhDflt.bib
+++ b/bib/PhDflt.bib
@@ -1,17 +1,3 @@
-@article{Hnisz2016a,
-author = {Hnisz, Denes and Day, Daniel S. and Young, Richard A.},
-doi = {10.1016/j.cell.2016.10.024},
-file = {:home/ibnsalem/Mendeley/Hnisz, Day, Young - 2016 - Insulated Neighborhoods Structural and Functional Units of Mammalian Gene Control.pdf:pdf},
-issn = {00928674},
-journal = {Cell},
-number = {5},
-pages = {1188--1200},
-publisher = {Elsevier},
-title = {{Insulated Neighborhoods: Structural and Functional Units of Mammalian Gene Control}},
-url = {http://linkinghub.elsevier.com/retrieve/pii/S0092867416314441},
-volume = {167},
-year = {2016}
-}
 @article{Beagrie2017,
 author = {Beagrie, Robert A. and Scialdone, Antonio and Schueler, Markus and Kraemer, Dorothee C. A. and Chotalia, Mita and Xie, Sheila Q. and Barbieri, Mariano and de Santiago, In{\^{e}}s and Lavitas, Liron-Mark and Branco, Miguel R. and Fraser, James and Dostie, Jos{\'{e}}e and Game, Laurence and Dillon, Niall and Edwards, Paul A. W. and Nicodemi, Mario and Pombo, Ana},
 doi = {10.1038/nature21411},
@@ -3464,6 +3450,20 @@ url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=3927313{\&}tool
 volume = {342},
 year = {2013}
 }
+@article{Hnisz2016a,
+author = {Hnisz, Denes and Day, Daniel S. and Young, Richard A.},
+doi = {10.1016/j.cell.2016.10.024},
+file = {:home/ibnsalem/Mendeley/Hnisz, Day, Young - 2016 - Insulated Neighborhoods Structural and Functional Units of Mammalian Gene Control.pdf:pdf},
+issn = {00928674},
+journal = {Cell},
+number = {5},
+pages = {1188--1200},
+publisher = {Elsevier},
+title = {{Insulated Neighborhoods: Structural and Functional Units of Mammalian Gene Control}},
+url = {http://linkinghub.elsevier.com/retrieve/pii/S0092867416314441},
+volume = {167},
+year = {2016}
+}
 @article{Lappalainen2013,
 author = {Lappalainen, Ilkka and Lopez, John and Skipper, Lisa and Hefferon, Timothy and Spalding, J. Dylan and Garner, John and Chen, Chao and Maguire, Michael and Corbett, Matt and Zhou, George and Paschall, Justin and Ananiev, Victor and Flicek, Paul and Church, Deanna M.},
 doi = {10.1093/nar/gks1213},
@@ -3928,6 +3928,19 @@ pages = {1--19},
 title = {{Topologically associated domains: a successful scaffold for the evolution of gene regulation in animals}},
 url = {http://onlinelibrary.wiley.com/doi/10.1002/wdev.265/full},
 year = {2017}
+}
+@article{Fudenberg2018,
+abstract = {Chromosome organization poses a remarkable physical problem with many biological consequences: how can molecular interactions between proteins at the nanometer scale organize micron-long chromatinized DNA molecules, insulating or facilitating interactions between specific genomic elements? The mechanism of active loop extrusion holds great promise for explaining interphase and mitotic chromosome folding, yet remains difficult to assay directly. We discuss predictions from our polymer models of loop extrusion with barrier elements, and review recent experimental studies that provide strong support for loop extrusion, focusing on perturbations to CTCF and cohesin assayed via Hi-C in interphase. Finally, we discuss a likely molecular mechanism of loop extrusion by SMC complexes.},
+author = {Fudenberg, Geoffrey and Abdennur, Nezar and Imakaev, Maxim and Goloborodko, Anton and Mirny, Leonid},
+doi = {10.1101/264648},
+file = {:home/ibnsalem/Mendeley/Fudenberg et al. - 2018 - Emerging Evidence of Chromosome Folding by Loop Extrusion.pdf:pdf},
+journal = {bioRxiv},
+month = {feb},
+pages = {264648},
+publisher = {Cold Spring Harbor Laboratory},
+title = {{Emerging Evidence of Chromosome Folding by Loop Extrusion}},
+url = {https://www.biorxiv.org/content/early/2018/02/16/264648},
+year = {2018}
 }
 @article{Xie2017,
 abstract = {The study of enhancers has been hampered by the scarcity of methods to systematically quantify their endogenous activity. We develop Mosaic-seq to systematically perturb enhancers and measure their endogenous activities at single-cell resolution. Mosaic-seq uses a CRISPR barcoding system to jointly measure a cell's transcriptome and its sgRNA modulators, thus quantifying the effects of dCas9-KRAB-mediated enhancer repression in single cells. Applying Mosaic-seq to 71 constituent enhancers from 15 super-enhancers, our analysis of 51,448 sgRNA-induced transcriptomes finds that only a small number of constituents are major effectors of target gene expression. Binding of p300 and RNAPII are key features of these constituents. We determine two key parameters of enhancer activity in single cells: their penetrance in a population and their contribution to expression in these cells. Through combinatorial interrogation, we find that simultaneous repression of multiple weak constituents can alter super-enhancer activity in a manner greatly exceeding repression of individual constituents.},
