--- a/bib/PhDfltClean.bib
+++ b/bib/PhDfltClean.bib
@@ -1107,6 +1107,16 @@
  year = {1998}
 }
 
+@article{Fudenberg2018,
+ author = {Fudenberg, Geoffrey and Abdennur, Nezar and Imakaev, Maxim and Goloborodko, Anton and Mirny, Leonid},
+ doi = {10.1101/264648},
+ journal = {bioRxiv},
+ pages = {264648},
+ publisher = {Cold Spring Harbor Laboratory},
+ title = {Emerging Evidence of Chromosome Folding by Loop Extrusion},
+ year = {2018}
+}
+
 @article{Fudenberg2016,
  author = {Fudenberg, Geoffrey and Imakaev, Maxim and Lu, Carolyn and Goloborodko, Anton and Abdennur, Nezar and Mirny, Leonid A.},
  doi = {10.1016/j.celrep.2016.04.085},
